kubernetes/infrastructure/istio/defaultgateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: technologylab.uk-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
